Image for desktop

--- a/style.css
+++ b/style.css
@@ -35,21 +35,52 @@ body {
 
 }
 
-.card_image {
-    
+.card__image img{
+    width: 100%;
+    height: auto;
+    max-width: 25rem;
 }
 
-.card_text {
-    
+.card__box{
+    display: none;
 }
 
+.card__text {
+    
+}
+/* 16 Pixels = 1rem / em */
 @media (min-width: 56em){
     .card{
+        position: relative;
         display: flex;
         margin: 6rem auto;
+        padding-right: 2rem;
+        background-image: url('images/bg-pattern-desktop.svg');
+        background-size: 45%;
+        background-repeat: no-repeat;
+        background-position: -13% center;
     }
 
-    .card_image, .card_text{
+    .card__box{
+        display: block;
+        position: absolute;
+        z-index: 1;
+        top: 57%;
+        left: 0;
+        transform: translateX(-50%) translateY(-50%);
+    }
+
+    .card__image, .card__text{
         flex: 1;
+    }
+
+    .card__image{
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .card__image img {
+        transform: translateX(-4rem);
     }
 }
